# easy-stream

./: Cargo.toml
html/: index.html
src/: cam_worker.rs  camstream.rs  main.rs  webstream.rs
