[package]
name = "easy-stream"
version = "0.1.0"
authors = ["David Schramm <david.schramm@live.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
v4l = "0.14"
axum = { version= "0.6.20", features= ["macros"]}
futures = "0.3.28"
hyper = "0.14.27"
tokio = {version = "1.29.1", features = ["fs", "io-util", "rt-multi-thread", "macros", "time", "sync"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
http = "0.2"
log = "0.4"
simple_logger = "4.2"
anyhow = "1.0.75"
clap = { version = "4.4.3", features = ["derive"] }
